[project]
name = "py-litestar"
version = "0.1.0"
description = ""
authors = [
  { name = "priscira", email = "104620864+priscira@users.noreply.github.com" },
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "litestar (>=2.19.0,<3.0.0)",
    "hypercorn (>=0.18.0,<0.19.0)",
    "niquests (>=3.16.1,<4.0.0)",
    "selectolax (>=0.4.6,<0.5.0)"
]
