[package]
name = "rs-salvo"
version = "0.1.0"
edition = "2024"

[dependencies]
hifitime = "4.2.3"
jzon = "0.12.5"
nyquest = { version = "0.3.1", features = ["async"] }
nyquest-preset = { version = "0.3.0", features = ["async"] }
rbatis = "4.6.13"
rbdc-sqlite = "4.6.2"
rbs = "4.6.2"
salvo = { version = "0.85.0", features = ["affix-state", "catch-panic", "logging"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros"] }

[dev-dependencies]
